<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="Wert1">Wert 1</string>
    <string name="Wert2">Wert 2</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Mal">*</string>
    <string name="Dividiert">/</string>
    <string name="Berechnen">Berechnen</string>
    <string name="MS">MS</string>
    <string name="MR">MR</string>
    <string name="Ergebnis">Ergebnis</string>
</resources>