<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".FirstFragment">

    <!-- Guideline for 10% of screen width -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_10_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Wert1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/Plus"
        app:layout_constraintStart_toStartOf="@+id/guideline_10_percent"
        app:layout_constraintTop_toBottomOf="@id/editText1" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/Minus"
        app:layout_constraintStart_toEndOf="@id/radioButton1"
        app:layout_constraintTop_toBottomOf="@id/editText1" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/Mal"
        app:layout_constraintStart_toEndOf="@id/radioButton2"
        app:layout_constraintTop_toBottomOf="@id/editText1" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/Dividiert"
        app:layout_constraintStart_toEndOf="@id/radioButton3"
        app:layout_constraintTop_toBottomOf="@id/editText1" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/Wert2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioButton1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_square"
        android:text="@string/Berechnen"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="0dp"
        android:background="@drawable/button_square"
        android:text="@string/MS"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/editText2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="0dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_square"
        android:text="@string/MR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/editText2" />


    <TextView
        android:id="@+id/textview_first"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#0056FF"
        android:gravity="end"
        android:text="@string/Ergebnis"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/button1" />
</androidx.constraintlayout.widget.ConstraintLayout>
